refactor(graph): improve self-reference path handling and relationship type filtering in DefaultGraph